--- a/index.html
+++ b/index.html
@@ -1,42 +1,40 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
-<div id="main">
+  <title>Bootstrap Example</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet"    href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
 <body>
-<div class="jumbotron text-center">
+  <div class="jumbotron text-center">
   <h1 id="title">Joe Rogan Tribute Page</h1>
   <p>Resize this responsive page to see the effect!</p> 
   <img id="img-div" id="image" id="img-caption"> insert image</img>
   id="tribute-info"
 </div>
-  
-<div class="container">
+
+<div class="container-fluid">
+  <h1>Hello World!</h1>
+  <p>Resize the browser window to see the effect.</p>
+  <p>The columns will automatically stack on top of each other when the screen is less than 768px wide.</p>
   <div class="row">
-    <div class="col-sm-4">
-      <h3>Column 1</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-    </div>
-    <div class="col-sm-4">
-      <h3>Column 2</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-    </div>
-    <div class="col-sm-4">
-      <h3>Column 3</h3>        
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-    </div>
+    <div class="col-sm-4" style="background-color:lavender;">.col-sm-4</div>
+    <div class="col-sm-8" style="background-color:lavenderblush;">.col-sm-8</div>
+          <h3>Key dates in Joe Rogan's life:</h3>
+      <ul>
+            <li><strong>1967</strong> - Born in Newark, New Jersey</li>
+            <li><strong>1988</strong> - Performs first stand up routine at an open mic night at the Stitches comedy Club, Boston</li>
+            <li><strong>1990</strong> - Moves to New York City as a full time comedian</li>
+            <li><strong>1994</strong> - relocates to Los Angeles, appears on MTV's comdey show Half Hour Comedy Hour</li>        
+            <li><strong>1999</strong> - Appears in FOX sitcom Hardball as Frank Valentine</li>
+                  </ul>
+          <blockquote>
+          <p class="tribute-link-container">If you have time, you should read more about this incredible human being on his <a href="https://www.joerogan.com/" id="tribute-link" target="_blank">personal website</a></p>
   </div>
 </div>
-
+    
 </body>
 </html>
-
- 
+    
