--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 <body>
   <div class="jumbotron text-center">
   <h1 id="title">Joe Rogan Tribute Page</h1>
-  <p>Resize this responsive page to see the effect!</p> 
-  <img id="img-div" id="image" id="img-caption"> insert image</img>
-  id="tribute-info"
+  <p>I am making this page in part thanks to Joe's....!</p> 
 </div>
-
 <div class="container-fluid">
   <h1>Hello World!</h1>
-  <p>Resize the browser window to see the effect.</p>
+  <p>Joe Rogan is a .</p>
   <p>The columns will automatically stack on top of each other when the screen is less than 768px wide.</p>
   <div class="row">
-    <div class="col-sm-4" style="background-color:lavender;">.col-sm-4</div>
-    <div class="col-sm-8" style="background-color:lavenderblush;">.col-sm-8</div>
+    <div class="col-sm-4" style="background-color:lavender;">.col-sm-4
+      <img id="img-div" id="image" id="img-caption"> insert image</img>
+  id="tribute-info"
+    </div>
+    <div class="col-sm-8" style="background-color:lavenderblush;">.col-sm-8
           <h3>Key dates in Joe Rogan's life:</h3>
       <ul>
             <li><strong>1967</strong> - Born in Newark, New Jersey</li>
@@ -30,8 +30,14 @@
             <li><strong>1994</strong> - relocates to Los Angeles, appears on MTV's comdey show Half Hour Comedy Hour</li>        
             <li><strong>1999</strong> - Appears in FOX sitcom Hardball as Frank Valentine</li>
                   </ul>
+      </div>
           <blockquote>
-          <p class="tribute-link-container">If you have time, you should read more about this incredible human being on his <a href="https://www.joerogan.com/" id="tribute-link" target="_blank">personal website</a></p>
+           
+ <p class="tribute-link-container">If you have time, you should read more about this incredible human being on his <a href="https://www.joerogan.com/" id="tribute-link" target="_blank">personal website</a></p>
+ <footer class="text-center">
+    <hr>
+    <p>Written and coded by Brian Lee. I used resources from  <a href="https://www.freecodecamp.com/ target="_blank"></a>and<a href="https://https://www.w3schools.com/target="_blank"></a>.</p>
+  </footer>
   </div>
 </div>
     
