--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>Joe Rogan Tribute Pagee</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
@@ -9,31 +10,43 @@
 </head>
 <body>
   <div class="jumbotron text-center">
-  <h1 id="title">Joe Rogan Tribute Page</h1>
-  <p>I am making this page in part thanks to Joe's....!</p> 
-</div>
+  <!--<h1 id="title">Joe Rogan Tribute Page</h1>-->
+  </div>
 <div class="container-fluid">
-  <h1>Hello World!</h1>
   <p>Joe Rogan is a .</p>
   <p>The columns will automatically stack on top of each other when the screen is less than 768px wide.</p>
   <div class="row">
-    <div class="col-sm-4" style="background-color:lavender;">.col-sm-4
-      <img id="img-div" id="image" id="img-caption"> insert image</img>
-  id="tribute-info"
+    <div class="col-sm-4" style="background-color:lavender;">
+    <figure id="img-div">
+    <img
+      id="image"
+      src= "https://images.squarespace-cdn.com/content/v1/587aec812994ca23948fd074/1510582602985-OQPIM45IJZVWRHISXV9D/ke17ZwdGBToddI8pDm48kO2pS9cMHbO4RvHPc8Skf1tZw-zPPgdn4jUwVcJE1ZvWhcwhEtWJXoshNdA9f1qD7SSwGn0TPzISNt3iSJufpcvR7xFZ2oYA-YTitnkXPCuTgiUfhLEJ_Uxi_cK3qclb8w/JRE2.png"
+       class= "center"
+      alt="The Joe Rogan Experince Logo"
+    />
+    <figcaption id="img-caption">
+     <p class="tribute-link-container">The Joe Rogan Experince Logo.  For the latest episodes and to find out more about the podcast and Joe you can check his <a href="http://podcasts.joerogan.net/" id="tribute-link" target="_blank">personal website</a></p>
+    </figcaption>
+  </figure>
+    
     </div>
-    <div class="col-sm-8" style="background-color:lavenderblush;">.col-sm-8
+    <div class="col-sm-8" style="background-color:lavenderblush;">
           <h3>Key dates in Joe Rogan's life:</h3>
       <ul>
             <li><strong>1967</strong> - Born in Newark, New Jersey</li>
             <li><strong>1988</strong> - Performs first stand up routine at an open mic night at the Stitches comedy Club, Boston</li>
             <li><strong>1990</strong> - Moves to New York City as a full time comedian</li>
-            <li><strong>1994</strong> - relocates to Los Angeles, appears on MTV's comdey show Half Hour Comedy Hour</li>        
+            <li><strong>1994</strong> - Relocates to Los Angeles, appears on MTV's comdey show Half Hour Comedy Hour</li> 
+            <li><strong>1997 - present</strong> - Colour commentator for Ultimate fighting Champioship</li>
             <li><strong>1999</strong> - Appears in FOX sitcom Hardball as Frank Valentine</li>
-                  </ul>
-      </div>
-          <blockquote>
-           
- <p class="tribute-link-container">If you have time, you should read more about this incredible human being on his <a href="https://www.joerogan.com/" id="tribute-link" target="_blank">personal website</a></p>
+            <li><strong>2000</strong> - First stand up comedy speacial released "Im Going to be Dead Someday"</li>
+            <li><strong>2001-2006</strong> - Hosts American edition of Fear Factor</li>
+            <li><strong>2007</strong> - Makes two more stand up comedy speacials "Joe Rogan: Live" and "Shiny happy jihad"</li>
+        <li><strong>2009</strong> - Records 1st Podcast with Brian Redban</li> http://podcasts.joerogan.net/
+        <li><strong>2010</strong> - The Joe Rogan Experince Podcast appears in the iTunes top 100 podcasts</li>
+        </ul>
+      </div>       
+
  <footer class="text-center">
     <hr>
     <p>Written and coded by Brian Lee. I used resources from  <a href="https://www.freecodecamp.com/ target="_blank"></a>and<a href="https://https://www.w3schools.com/target="_blank"></a>.</p>
